# delta-enabled-crdts

./: CMakeLists.txt
cmake/: config.cmake.in  install.cmake
include/crdts/: delta-crdts.h
src/: CMakeLists.txt  delta-crdts.cc
